# drug-maintenance-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/application/api/: main.py
app/application/api/dependecies/: containers.py
app/application/api/pharmacy/: handlers.py  schemas.py
app/application/api/products/: handlers.py  schemas.py
app/domain/entities/: base.py  pharmacy.py  price.py  product.py
app/domain/events/: base.py  pharmacy.py  product.py
app/domain/exceptions/: base.py  product.py
app/domain/values/: product.py
app/infra/repositories/: base.py  converters.py  memory.py  mongo.py  pharmacy.py  products.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  pharmacy.py  products.py
app/logic/containers/: handlers.py  init.py  mediators.py  repositories.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  pharmacy.py  products.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/domain/values/: test_product.py
app/tests/logic/: conftest.py  test_pharmacy.py  test_product.py
docker-compose/: app.yaml  storages.yaml
